# EITS

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: BuildOptions.cmake  ProjectVersion.cmake  Version.cmake
cmake/modules/: CMakeLists.txt
cmake/template/: config.h.in
docs/: syntax.md
eits-docs/: build.sh  preview.sh  setup.sh
eits-hott/: CMakeLists.txt  README.md
eits-hott/cmake/: BuildOptions.cmake  ProjectVersion.cmake  Version.cmake
eits-hott/cmake/template/: version.h.in
eits-hott/include/HoTT/: HoTT.h
eits-hott/include/HoTT/core/basis/: level.h
eits-hott/include/HoTT/core/error/: engine_error.h
eits-hott/include/HoTT/core/parser/: parser.h  token.h
eits-hott/include/HoTT/core/parser/lexer/: lexer.h  scanner.h  stratagy_manager.h  token.h
eits-hott/include/HoTT/core/parser/lexer/dfa/: dfa_base.h  dfa_colon.h  dfa_identifier.h  dfa_keyword.h  dfa_number.h
eits-hott/include/HoTT/core/parser/lexer/stratagy/: base_stratagy.h  colon_stratagy.h  identifier_stratagy.h  number_stratagy.h
eits-hott/include/HoTT/core/runtime/: engine.h  runtime.h
eits-hott/include/HoTT/core/semantics/: context.h  definition.h  env.h  typecheck.h  value.h
eits-hott/include/HoTT/core/semantics/value/: closure.h  const.h  neutral.h
eits-hott/include/HoTT/core/syntax/: binder.h
eits-hott/include/HoTT/core/syntax/expression/: expression.h  term.h  type.h  universe.h
eits-hott/include/HoTT/core/syntax/expression/term/: constant.h  lambda.h  pair.h  refl.h  variable.h
eits-hott/include/HoTT/core/syntax/expression/type/: Id.h  Pi.h  Sigma.h
eits-hott/include/HoTT/meta/: version.h
eits-hott/include/internal/expression/: expression_template.h
eits-hott/lib/logger/: CMakeLists.txt
eits-hott/lib/logger/src/: logger.cpp
eits-hott/src/: CMakeLists.txt
eits-hott/src/common/: CMakeLists.txt
eits-hott/src/core/: CMakeLists.txt
eits-hott/src/core/basis/: CMakeLists.txt  level.cpp
eits-hott/src/core/error/: CMakeLists.txt  engine_error.cpp
eits-hott/src/core/parser/: CMakeLists.txt  parser.cpp
eits-hott/src/core/parser/lexer/: CMakeLists.txt  lexer.cpp  scanner.cpp  stratagy_manager.cpp  token.cpp
eits-hott/src/core/parser/lexer/dfa/: CMakeLists.txt  dfa_colon.cpp  dfa_identifier.cpp  dfa_number.cpp
eits-hott/src/core/parser/lexer/stratagy/: CMakeLists.txt  identifier_stratagy.cpp
eits-hott/src/core/runtime/: CMakeLists.txt  context.cpp  engine.cpp  runtime.cpp
eits-hott/src/core/semantics/: CMakeLists.txt  typecheck.cpp
eits-hott/src/core/semantics/eliminator/: CMakeLists.txt
eits-hott/src/core/semantics/term/: CMakeLists.txt  lambda.cpp  pair.cpp  refl.cpp
eits-hott/src/core/syntax/: CMakeLists.txt  binder.cpp  variable.cpp
eits-hott/src/core/syntax/expression/: CMakeLists.txt  expression.cpp  term.cpp  type.cpp  universe.cpp
eits-hott/src/core/syntax/expression/type/: Id.cpp  Pi.cpp  Sigma.cpp
eits-hott/src/internal/: CMakeLists.txt
eits-hott/src/internal/charutil/: CMakeLists.txt  charutil.h  subscript.cpp  subscript.h  utf8_decoder.h
eits-hott/src/internal/display/: CMakeLists.txt  display.h
eits-hott/src/internal/instructions/: CMakeLists.txt  snapshot.cpp  snapshot.h
eits-hott/src/internal/uid/: CMakeLists.txt  uid.cpp  uid.h
eits-hott/src/meta/: CMakeLists.txt  version.cpp
eits-repl/: CMakeLists.txt  editor.cpp  main.cpp
eits-repl/src/: CMakeLists.txt  common.cpp  common.h  main.cpp
eits-repl/src/editor/: editor.cpp  editor.h
eits-repl/src/history/: history.cpp  history.h
eits-repl/src/registry/: registry.cpp
eits-repl/src/registry/builtin/: clear.cpp  context.cpp  def.cpp  define.cpp  eval.cpp  exit.cpp  help.cpp  history.cpp  load.cpp  save.cpp  type.cpp
eits-repl/src/repl/: command_dispatch.cpp  command_dispatch.h  registry.cpp  registry.h
eits-repl/src/repl/builtin/: exit.cpp  help.cpp  history.cpp
examples/: CMakeLists.txt  main.cpp
include/Machinish/: Machinish.h
include/Machinish/info/: version.hpp
include/Machinish/kernel/: contex.h  expression.h  term.h  type.h
include/Machinish/kernel/Forms/: pi.h  typed_variable.h  universe.h
include/Machinish/kernel/basis/: level.h
include/Machinish/kernel/runtime/: context.h  runtime.h
include/Machinish/kernel/semantics/: context.h  definition.h  env.h  value.h
include/Machinish/kernel/semantics/constructor/: lambda.h  pair.h
include/Machinish/kernel/semantics/forms/: Lambda.h  Pi.h  Sigma.h
include/Machinish/kernel/syntax/: binder.h  variable.h
include/Machinish/meta/: version.h
include/internal/expression/: expression_template.h
lib/logger/: README.md
lib/logger/example/: main.cpp
lib/logger/src/: logger.cpp
scripts/: setup_vscode.sh  word_count.sh
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/info/: CMakeLists.txt  version.cpp
src/internal/: CMakeLists.txt
src/internal/charutil/: CMakeLists.txt  subscript.cpp  subscript.h
src/internal/instructions/: CMakeLists.txt  context.h  snapshot.cpp  snapshot.h
src/internal/uid/: CMakeLists.txt  uid.cpp  uid.h
src/kernel/: CMakeLists.txt  type.cpp
src/kernel/basis/: CMakeLists.txt  level.cpp
src/kernel/runtime/: CMakeLists.txt  context.cpp  runtime.cpp
src/kernel/semantics/: CMakeLists.txt
src/kernel/semantics/constructor/: CMakeLists.txt  lambda.cpp
src/kernel/semantics/eliminator/: CMakeLists.txt
src/kernel/semantics/forms/: CMakeLists.txt  Lambda.cpp  Pi.cpp
src/kernel/semantics/term/: lambda.cpp  pair.cpp  refl.cpp
src/kernel/syntax/: CMakeLists.txt  binder.cpp  variable.cpp
src/kernel/syntax/expression/: CMakeLists.txt  expression.cpp  term.cpp  type.cpp  universe.cpp  variable.cpp
src/kernel/syntax/expression/type/: Id.cpp  Pi.cpp  Sigma.cpp
src/meta/: CMakeLists.txt  version.cpp
test/: CMakeLists.txt
test/internal/: CMakeLists.txt
test/internal/uid/: CMakeLists.txt  test_uid.cpp
test/kernel/: CMakeLists.txt  types.cpp
test/kernel/basis/: CMakeLists.txt
test/kernel/basis/level/: CMakeLists.txt  test_level.cpp
tools/editor/: README.md
tools/editor/vscode/: settings.json
(+15 files in other folders)
